<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Distance"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/button_typeD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:onClick="changeType"
        android:text="@string/type"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_convert_distance"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView_convertDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="87dp"
        android:layout_marginLeft="87dp"
        android:layout_marginTop="111dp"
        android:text="@string/convert_distance"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_convert_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="59dp"
        android:onClick="onClickConvert"
        android:text="@string/convert"
        app:layout_constraintStart_toEndOf="@+id/button_typeD"
        app:layout_constraintTop_toBottomOf="@+id/editText_valueDistance" />

    <EditText
        android:id="@+id/editText_valueDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="23dp"
        android:layout_marginLeft="23dp"
        android:layout_marginTop="213dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_type_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="18dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toEndOf="@+id/editText_valueDistance"
        app:layout_constraintTop_toTopOf="@+id/editText_valueDistance" />

    <TextView
        android:id="@+id/textView_convert_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintBottom_toBottomOf="@+id/button_convert_distance"
        app:layout_constraintStart_toEndOf="@+id/button_convert_distance" />

    <TextView
        android:id="@+id/textView_result_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="33dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toStartOf="@+id/textView_convert_to"
        app:layout_constraintStart_toStartOf="@+id/textView_convert_to"
        app:layout_constraintTop_toBottomOf="@+id/textView_convert_to" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="31dp"
        android:layout_marginLeft="31dp"
        android:layout_marginTop="33dp"
        android:text="@string/result"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_typeD" />
</android.support.constraint.ConstraintLayout>